# layer-freeze

./: .gitignore  README.md  pyproject.toml  run_1nodes_8workers_1gpu.sh  run_1nodes_8workers_1gpu_grid.sh  test.py
experiments/: measure_plot_model_training_hw_metrics.py
experiments/resnet/: continuation.py  sh_training_progression_test.py  simple_cnn_cifar10.py  simple_cnn_cifar10_hp_grid.py  utils.py
layer_freeze/: __init__.py  freeze_layers.py  model_agnostic_freezing.py  simple_cnn_cifar10.py  simple_cnn_cifar10_hp_grid.py  successive_halving.py  utils.py
layer_freeze/plotting/: analyze_hp_correlation.py  plot_timing_analysis.py  plotting_memory_usage_and_timing.py  ranking_viz.ipynb
layer_freeze/resnet/: simple_cnn_cifar10.py  simple_cnn_cifar10_hp_grid.py  utils.py
results/model_perf/data/: model_stats_resnet101_batch_size_1.csv  model_stats_resnet101_batch_size_128.csv  model_stats_resnet101_batch_size_32.csv  model_stats_resnet101_batch_size_64.csv  model_stats_resnet152_batch_size_1.csv  model_stats_resnet152_batch_size_128.csv  model_stats_resnet152_batch_size_32.csv  model_stats_resnet152_batch_size_64.csv  model_stats_resnet18_batch_size_1.csv  model_stats_resnet18_batch_size_128.csv  model_stats_resnet18_batch_size_32.csv  model_stats_resnet18_batch_size_64.csv  model_stats_resnet34_batch_size_1.csv  model_stats_resnet34_batch_size_128.csv  model_stats_resnet34_batch_size_32.csv  model_stats_resnet34_batch_size_64.csv  (+4 more)
scripts/: model_perf.sh  model_perf_with_quant.sh  run_1nodes_8workers_1gpu.sh
tests/: test_model_agnostic_freezing.py
