[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layer-freeze"
version = "0.1.0"
description = "A tool for hyperparameter optimization using successive halving"
authors = [{ name = "Timur Michael Carstensen", email = "timurcarstensen@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "neural-pipeline-search@git+https://github.com/automl/neps.git",
    "mup",
    "GitPython",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]

[tool.setuptools.packages.find]
include = ["layer_freeze*"]

[tool.ruff]
select = ["E", "F", "I", "N", "W", "B", "C4", "PT", "RUF", "SIM", "TCH"]
ignore = []
line-length = 100
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["layer_freeze"]
